[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d01"
path = "src/d01.rs"

[[bin]]
name = "d02"
path = "src/d02.rs"

[[bin]]
name = "d03"
path = "src/d03.rs"

[[bin]]
name = "d09"
path = "src/d09.rs"

[[bin]]
name = "d10"
path = "src/d10.rs"

[[bin]]
name = "d10p02"
path = "src/d10p02.rs"

[dependencies]
